fix overflow

--- a/wedding/wedding_files/main.css
+++ b/wedding/wedding_files/main.css
@@ -18,6 +18,10 @@ textarea {
     color: #222;
 }
 
+html {
+    overflow-x: initial !important;
+}
+
 body {
     font-family: "Georgia", "Times New Roman", serif;
     font-weight: normal;
